# pybosl2

./: .gitignore  .gitignore.swp  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  comparisons.py  geometry.py  miscellaneous.py  monkeytype.sqlite3  nurbs.py  partitions.py  pyproject.toml  rounding.py  shapes3d.py  skin.py  vectors.py
.github/workflows/: docs.yml  format.yml  release.yml  tests.yml
bosl2/: __init__.py  _helpers.py  _mctable.py  ball_bearings.py  beziers.py  bottlecaps.py  color.py  comparisons.py  constants.py  cubetruss.py  distributors.py  drawing.py  gears.py  geometry.py  hinges.py  hooks.py  isosurface.py  joiners.py  linear_bearings.py  masking.py  math.py  miscellaneous.py  modular_hose.py  nema_steppers.py  nurbs.py  partitions.py  paths.py  polyhedra.py  regions.py  rounding.py  screw_drive.py  screws.py  shapes2d.py  shapes2d.py.bak  shapes3d.py  shapes3d.py.bak  skin.py  sliders.py  texture.py  threading.py  (+7 more)
docs/: Makefile  _specgen.py  ball_bearings.rst  beziers.rst  bottlecaps.rst  color.rst  comparisons.rst  conf.py  constants.rst  cubetruss.rst  distributors.rst  drawing.rst  gears.rst  geometry.rst  hinges.rst  hooks.rst  index.rst  isosurface.rst  joiners.rst  linear_bearings.rst  masking.rst  miscellaneous.rst  modular_hose.rst  native_ops.rst  nema_steppers.rst  partitions.rst  paths.rst  polyhedra.rst  regions.rst  rounding.rst  screw_drive.rst  screws.rst  shapes2d.rst  shapes3d.rst  skin.rst  sliders.rst  texture.rst  threading.rst  transforms.rst  turtle3d.rst  (+4 more)
docs/_ext/: bosl2_example.py  bosl2_navsidebar.py  stl_viewer.py
docs/_static/: pysidebar.css
pysolidfive/: README.md  __init__.py  _constants.py  _edges.py  joiners.py  paths.py  pyproject.toml  shapes2d.py  shapes3d.py  skin.py
pysolidfive/docs/: Makefile  conf.py  index.rst
pysolidfive/docs/_ext/: pythonscad_example.py
pysolidfive/tests/: __init__.py  mock_libfive.py  render_pysolidfive.py  test_joiners.py  test_paths.py  test_pysolidfive.py  test_pysolidfive_render.py  test_shapes2d.py  test_shapes3d.py  test_skin.py
pysolidfive/wiki/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
pysolidfive/wiki/_modules/: index.html  pysolidfive.html
tests/: conftest.py  render_stl.py  test_ball_bearings.py  test_beziers.py  test_bottlecaps.py  test_color.py  test_comparisons.py  test_constants.py  test_cubetruss.py  test_distributors.py  test_drawing.py  test_gears.py  test_geometry.py  test_hinges.py  test_hooks.py  test_isosurface.py  test_joiners.py  test_linear_bearings.py  test_masking.py  test_math.py  test_miscellaneous.py  test_modular_hose.py  test_native_ops.py  test_nema_steppers.py  test_nurbs.py  test_partitions.py  test_paths.py  test_paths3d.py  test_polyhedra.py  test_regions.py  test_rounding.py  test_screw_drive.py  test_screws.py  test_shapes2d.py  test_shapes3d.py  test_skin.py  test_sliders.py  test_stl_render.py  test_texture.py  test_threading.py  (+7 more)
tests/golden_stls/: cyl_chamf.stl  egg.stl  glued.stl  knuckle_hinge.stl  pent_round.stl  pentprism_round.stl  pieslice.stl  reuleaux.stl  spheroid.stl  spurgear.stl  star.stl  teardrop2d.stl  torus.stl  tube_chamf.stl
wiki/: .buildinfo  .buildinfo.bak  ball_bearings.html  beziers.html  bottlecaps.html  color.html  comparisons.html  constants.html  cubetruss.html  distributors.html  drawing.html  gears.html  genindex.html  geometry.html  hinges.html  hooks.html  index.html  isosurface.html  joiners.html  linear_bearings.html  masking.html  math.html  miscellaneous.html  modular_hose.html  native_ops.html  nema_steppers.html  nurbs.html  objects.inv  partitions.html  paths.html  polyhedra.html  py-modindex.html  regions.html  rounding.html  screw_drive.html  screws.html  search.html  searchindex.js  shapes2d.html  shapes3d.html  (+10 more)
wiki/.doctrees/: ball_bearings.doctree  beziers.doctree  bottlecaps.doctree  color.doctree  comparisons.doctree  constants.doctree  cubetruss.doctree  distributors.doctree  drawing.doctree  environment.pickle  gears.doctree  geometry.doctree  hinges.doctree  hooks.doctree  index.doctree  isosurface.doctree  joiners.doctree  linear_bearings.doctree  masking.doctree  math.doctree  miscellaneous.doctree  modular_hose.doctree  native_ops.doctree  nema_steppers.doctree  nurbs.doctree  partitions.doctree  paths.doctree  polyhedra.doctree  regions.doctree  rounding.doctree  screw_drive.doctree  screws.doctree  shapes2d.doctree  shapes3d.doctree  skin.doctree  sliders.doctree  texture.doctree  threading.doctree  transforms.doctree  turtle3d.doctree  (+4 more)
wiki/_modules/: index.html
wiki/_sources/: ball_bearings.rst.txt  beziers.rst.txt  bottlecaps.rst.txt  color.rst.txt  distributors.rst.txt  drawing.rst.txt  gears.rst.txt  geometry.rst.txt  hinges.rst.txt  hooks.rst.txt  index.rst.txt  isosurface.rst.txt  joiners.rst.txt  linear_bearings.rst.txt  masking.rst.txt  math.rst.txt  modular_hose.rst.txt  native_ops.rst.txt  nurbs.rst.txt  partitions.rst.txt  paths.rst.txt  polyhedra.rst.txt  rounding.rst.txt  screw_drive.rst.txt  screws.rst.txt  shapes2d.rst.txt  shapes3d.rst.txt  skin.rst.txt  sliders.rst.txt  threading.rst.txt  turtle3d.rst.txt  vectors.rst.txt  vnf.rst.txt  walls.rst.txt  wiring.rst.txt
wiki/_static/: alabaster.css  pysidebar.css
wiki/_stl/: 008b4a8222bfd7b6.stl  025fe1adbe488550.stl  0357241daa2fbd11.stl  04513d37f7b52f7d.stl  0637157152712f21.stl  068a97fc93f1ea0a.stl  0dc86732eb1d3d91.stl  11e6818c062ae644.stl  14aae92e1fe88dea.stl  1bf8eb47f11aaa54.stl  1ff095cb0796c5c1.stl  21d4409ffbb5e2bb.stl  222f624ec1b8e57d.stl  224d6cd394d56e08.stl  287acb30a256f78a.stl  2ac48ad5d6f13183.stl  3026850e6e62c07c.stl  341e0d175eaf4dfc.stl  360ba997c892a110.stl  362357d393ab17f5.stl  396037d1d70dce67.stl  39ddc4b66f2eb8ae.stl  3b20e3d31d668810.stl  3b61648888a991e4.stl  (+113 more)
(+326 files in other folders)
