[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybosl2"
# Read from bosl2/version.py's __version__ (the in-code default version), so the
# packaged version and the code never drift; the release workflow updates it there.
dynamic = ["version"]
description = "Python ports of the BOSL2 OpenSCAD library for use with PythonSCAD"
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.10"
authors = [
    { name = "pinkfish" },
]
keywords = ["3d", "openscad", "pythonscad", "bosl2", "cad", "3d-printing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
# Everything needed to run the test-suite in a venv. `pythonscad` provides the
# real `pythonscad`/`openscad` native modules the geometry code imports; the STL
# render tests additionally need the PythonSCAD app binary and skip without it.
test = [
    "pytest>=7",
    "numpy",
    "pythonscad",
]
# Build the API docs (Sphinx autodoc). Needs pythonscad because the geometry
# modules import it at load time, before autodoc can read their docstrings.
docs = [
    "sphinx>=7",
    "numpy",
    "pythonscad",
]

[project.urls]
Homepage = "https://github.com/pinkfish/pybosl2"
Repository = "https://github.com/pinkfish/pybosl2"

[tool.setuptools.dynamic]
version = { attr = "bosl2.version.__version__" }

[tool.setuptools.packages.find]
# bosl2 is the BOSL2 port; pysolidfive is a separate, self-contained libfive/SDF
# shape library vendored alongside it (it does not depend on bosl2).
include = ["bosl2", "bosl2.*", "pysolidfive", "pysolidfive.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Target Python version
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Embedded CSS/SVG/JS string literals in the spec-sheet generator are inherently long.
"docs/_specgen.py" = ["E501"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
